--- a/index-fr.html
+++ b/index-fr.html
@@ -42,9 +42,9 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading">Bienvenue dans notre studio!</div>
-                <div class="masthead-heading text-uppercase">C'est bon de vous rencontrer</div>
-                <a class="btn btn-primary btn-xl text-uppercase" href="#services">Dîtes m'en plus !</a>
+                <div class="masthead-subheading text-black" style="font-weight: bolder;">Bienvenue dans notre studio!</div>
+                <div class="masthead-heading text-uppercase text-black">C'est bon de vous rencontrer</div>
+                <a class="btn btn-primary btn-xl text-uppercase text-black" href="#services">Dîtes m'en plus !</a>
             </div>
         </header>
         <!-- Services-->
@@ -198,7 +198,7 @@
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>2009-2011</h4>
-                                <h4 class="subheading">Nos humble début</h4>
+                                <h4 class="subheading">Nos humbles débuts</h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted">Nous avons commencé avec une équipe de passioné avec des intérêts commun : qualité et fun</p></div>
                         </div>
@@ -336,7 +336,7 @@
                             <div class="form-group">
                                 <!-- Name input-->
                                 <input class="form-control" id="name" type="text" placeholder="Your Name *" data-sb-validations="required" />
-                                <div class="invalid-feedback" data-sb-feedback="name:required">Un nom ets requis</div>
+                                <div class="invalid-feedback" data-sb-feedback="name:required">Un nom est requis</div>
                             </div>
                             <div class="form-group">
                                 <!-- Email address input-->
@@ -384,7 +384,7 @@
         <footer class="footer py-4">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-4 text-lg-start">Copyright &copy; Your Website 2023</div>
+                    <div class="col-lg-4 text-lg-start">Copyright &copy; PixelForge Studios 2024</div>
                     <div class="col-lg-4 my-3 my-lg-0">
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
