--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading">Welcome To Our Studio!</div>
-                <div class="masthead-heading text-uppercase">It's Nice To Meet You</div>
-                <a class="btn btn-primary btn-xl text-uppercase" href="#services">Tell Me More</a>
+                <div class="masthead-subheading text-black" style="font-weight: bolder;">Welcome To Our Studio!</div>
+                <div class="masthead-heading text-uppercase text-black">It's Nice To Meet You</div>
+                <a class="btn btn-primary btn-xl text-uppercase text-black" href="#services">Tell Me More</a>
             </div>
         </header>
         <!-- Services-->
@@ -386,7 +386,7 @@
         <footer class="footer py-4">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-4 text-lg-start">Copyright &copy; Your Website 2023</div>
+                    <div class="col-lg-4 text-lg-start">Copyright &copy; PixelForge Studios 2024</div>
                     <div class="col-lg-4 my-3 my-lg-0">
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
