--- a/pages/navbar/navbar-fr.html
+++ b/pages/navbar/navbar-fr.html
@@ -1,21 +1,36 @@
+<script src="../../assets/js/split-page.js"></script>
 <!-- Navigation-->
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
   <div class="container">
       <a class="navbar-brand" href="#page-top"><img src="assets/images/img/logos/logo-navbar-brand.png" style="height: 60px;" alt="logo navbar" /></a>
-      <a href="./index.html">
-        <img src="assets/images/img/logos/england-flag.png" style="width: 70px;" alt="england flag to change locale">
-      </a>
+      <!-- Button -->
+      <div id="button-langage">
+        <script>
+        let uri = document.location.href
+        uri = uri.substring(uri.lastIndexOf("/")+1)
+          if (uri == "index.html") {
+            renderContent("navbar/button-change-local/button-index", "button-langage")
+          } else if (uri == "index-fr.html") {
+            renderContent("navbar/button-change-local/button-index-fr", "button-langage")
+          } else if (uri == "store.html") {
+            renderContent("navbar/button-change-local/button-store", "button-langage")
+          } else if (uri == "store-en.html") {
+            renderContent("navbar/button-change-local/button-store-fr", "button-langage")
+          }
+        </script>
+      </div>  
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fas fa-bars ms-1"></i>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-              <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
-              <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
-              <li class="nav-item"><a class="nav-link" href="#about">A propos</a></li>
-              <li class="nav-item"><a class="nav-link" href="#team">Equipe</a></li>
-              <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+              <li class="nav-item"><a class="nav-link" href="index-fr.html#services">Services</a></li>
+              <li class="nav-item"><a class="nav-link" href="index-fr.htmlportfolio">Portfolio</a></li>
+              <li class="nav-item"><a class="nav-link" href="index-fr.htmlabout">A propos</a></li>
+              <li class="nav-item"><a class="nav-link" href="index-fr.html#team">Equipe</a></li>
+              <li class="nav-item"><a class="nav-link" href="./store-fr.html#store">Boutique</a></li>
+              <li class="nav-item"><a class="nav-link" href="index-fr.html#contact">Contact</a></li>
           </ul>
       </div>
   </div>
