--- a/pages/masterheader/masterheader-en.html
+++ b/pages/masterheader/masterheader-en.html
@@ -1,7 +1,7 @@
 <header class="masthead">
   <div class="container">
-      <div class="masthead-subheading">Welcome To Our Studio!</div>
-      <div class="masthead-heading text-uppercase">It's Nice To Meet You</div>
-      <a class="btn btn-primary btn-xl text-uppercase" href="#services">Tell Me More</a>
+      <div class="masthead-subheading text-black">Welcome To Our Studio!</div>
+      <div class="masthead-heading text-uppercase text-black">It's Nice To Meet You</div>
+      <a class="btn btn-primary btn-xl text-uppercase text-black" href="#services">Tell Me More</a>
   </div>
 </header>
