--- a/pages/services/services-fr.html
+++ b/pages/services/services-fr.html
@@ -27,7 +27,7 @@
                   <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
               </span>
               <h4 class="my-3">Sécurité</h4>
-              <p class="text-muted">La sécurité est un point important de la production de nos créations. Nous avons ds experts de la sécurité au sein de notre équipe pour répondre à ce besoin.</p>
+              <p class="text-muted">La sécurité est un point important de la production de nos créations. Nous avons des experts de la sécurité au sein de notre équipe pour répondre à ce besoin.</p>
           </div>
       </div>
   </div>
